--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
+    "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
