--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bg_etem__sicher_investieren",
+  "name": "sicherinvestieren",
   "version": "0.1.0",
   "private": true,
   "scripts": {
