--- a/public/config.json
+++ b/public/config.json
@@ -1,3 +1,3 @@
 {
-  "URLzuTestfragebogen": "http://192.168.86.52:8080/investieren/offsetdruck/"
+  "rootURL": "http://192.168.86.52:8080/investieren/sicher-investieren"
 }
