--- a/public/config.json
+++ b/public/config.json
@@ -1,3 +1,3 @@
 {
-  "rootURL": "http://192.168.86.52:8080/investieren/sicher-investieren"
+  "rootURL": "https://webapps.educorvi.de/sicher-investieren"
 }
