--- a/public/config.json
+++ b/public/config.json
@@ -1,3 +1,6 @@
 {
-  "rootURL": "https://webapps.educorvi.de/sicher-investieren"
+  "rootURL": "https://webapps.educorvi.de/sicher-investieren",
+  "loginURL": "https://webapps.educorvi.de/sicher-investieren/antworten/checklistlogin",
+  "dataSendURL": "https://webapps.educorvi.de/sicher-investieren/antworten/checklistdata",
+  "dataURL": "https://webapps.educorvi.de/sicher-investieren/antworten"
 }
