--- a/public/Manifest.json
+++ b/public/Manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Sicher Investieren",
   "short_name": "Investieren",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#fff",
   "theme_color": "#fff",
