--- a/public/config.json
+++ b/public/config.json
@@ -2,5 +2,6 @@
   "rootURL": "https://webapps.educorvi.de/sicher-investieren",
   "loginURL": "https://webapps.educorvi.de/sicher-investieren/antworten/checklistlogin",
   "dataSendURL": "https://webapps.educorvi.de/sicher-investieren/antworten/checklistdata",
-  "dataURL": "https://webapps.educorvi.de/sicher-investieren/antworten"
+  "dataURL": "https://webapps.educorvi.de/sicher-investieren/antworten",
+  "impressum": "https://www.bgetem.de/die-bgetem/impressum/impressum"
 }
