getting ready for merge

--- a/public/config.json
+++ b/public/config.json
@@ -1,5 +1,5 @@
 {
-  "rootURL": "https://webapps.educorvi.de/sicher-investieren",
+  "rootURL": "https://new-etem-praev.bg-kooperation.de/anwendungen/sicher-investieren",
   "loginURL": "https://webapps.educorvi.de/sicher-investieren/antworten/checklistlogin",
   "dataSendURL": "https://webapps.educorvi.de/sicher-investieren/antworten/checklistdata",
   "dataURL": "https://webapps.educorvi.de/sicher-investieren/antworten",
