--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pouchdb-find": "^7.2.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
+    "vue-ls": "^3.2.1",
     "vue-material": "^1.0.0-beta-11",
     "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.1.5",
