--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sicher_investieren",
-  "version": "0.7.3",
+  "version": "0.7.4",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -17,11 +17,11 @@
     "node-sass": "^4.13.1",
     "pouchdb": "^7.2.1",
     "pouchdb-find": "^7.2.1",
+    "progressbar.js": "^1.1.0",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-ls": "^3.2.1",
     "vue-material": "^1.0.0-beta-11",
-    "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
