Endpoints in config.json ausgelagert und schema erstellt

--- a/public/config.json
+++ b/public/config.json
@@ -1,7 +1,8 @@
 {
-  "rootURL": "https://new-etem-praev.bg-kooperation.de/anwendungen/sicher-investieren",
-  "loginURL": "https://webapps.educorvi.de/sicher-investieren/antworten/checklistlogin",
-  "dataSendURL": "https://webapps.educorvi.de/sicher-investieren/antworten/checklistdata",
-  "dataURL": "https://webapps.educorvi.de/sicher-investieren/antworten",
-  "impressum": "https://www.bgetem.de/die-bgetem/impressum/impressum"
+  "$schema": "./config_schema.json",
+  "frageboegen": "https://new-etem-praev.bg-kooperation.de/anwendungen/sicher-investieren",
+  "login": "https://new-etem-praev.bg-kooperation.de/anwendungen/sicher-investieren/medialogin",
+  "register": "https://new-etem-praev.bg-kooperation.de/anwendungen/sicher-investieren/checkregister",
+  "contact": "https://new-etem-praev.bg-kooperation.de/anwendungen/sicher-investieren/checkkontakt",
+  "database": "couch.kraeks.de"
 }
