Prechaching von Impressum und Datenschutzerklärung und Verschieben der Links in config.json

--- a/src/config.json
+++ b/src/config.json
@@ -4,5 +4,7 @@
   "login": "https://new-etem-praev.bg-kooperation.de/anwendungen/sicher-investieren/medialogin",
   "register": "https://new-etem-praev.bg-kooperation.de/anwendungen/sicher-investieren/checkregister",
   "contact": "https://new-etem-praev.bg-kooperation.de/anwendungen/sicher-investieren/checkkontakt",
-  "database": "couch.kraeks.de"
+  "database": "couch.kraeks.de",
+  "impressum": "https://www.bgetem.de/die-bgetem/impressum/impressum",
+  "datenschutz": "https://www.bgetem.de/die-bgetem/datenschutz/datenschutzerklaerung"
 }
