--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sicher_investieren",
-  "version": "0.8.8",
+  "version": "0.9.0a2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
