--- a/src/exmp_config.json
+++ b/src/exmp_config.json
@@ -7,5 +7,6 @@
   "database": "couch.kraeks.de",
   "impressum": "https://www.bgetem.de/die-bgetem/impressum/impressum",
   "datenschutz": "https://www.bgetem.de/die-bgetem/datenschutz/datenschutzerklaerung",
-  "disabledFeatures": []
+  "disabledFeatures": [],
+  "baseURL": "https://sicherinvestieren.educorvi.de/#/"
 }
