--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.6.11",
     "vue-ls": "^3.2.1",
     "vue-material": "^1.0.0-beta-11",
+    "vue-pull-refresh": "^0.2.7",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
