--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "release": "dotenv release-it"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.5.0",
     "core-js": "^3.6.4",
     "liquor-tree": "^0.2.70",
-    "node-sass": "^4.13.1",
-    "pouchdb": "^7.2.1",
-    "pouchdb-find": "^7.2.1",
+    "pouchdb": "^7.2.2",
+    "pouchdb-find": "^7.2.2",
     "progressbar.js": "^1.1.0",
     "register-service-worker": "^1.6.2",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10.2.0",
     "vue": "^2.6.12",
     "vue-ls": "^3.2.1",
     "vue-material": "^1.0.0-beta-15",
@@ -28,19 +27,19 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@release-it/bumper": "^1.4.1",
+    "@release-it/bumper": "^2.0.0",
     "@vue/cli-plugin-babel": "^4.5.4",
     "@vue/cli-plugin-eslint": "^4.5.4",
     "@vue/cli-plugin-pwa": "^4.5.4",
     "@vue/cli-plugin-router": "^4.5.4",
     "@vue/cli-plugin-vuex": "^4.5.4",
-    "@vue/cli-service": "^4.5.4",
+    "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.0.3",
-    "dotenv-cli": "^3.2.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "npx": "^10.2.2",
-    "release-it": "^13.7.0",
+    "dotenv-cli": "^4.0.0",
+    "eslint": "^7.26.0",
+    "eslint-plugin-vue": "^7.9.0",
+    "release-it": "^14.6.2",
+    "sass": "^1.32.13",
     "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
