--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "sicher_investieren",
-  "version": "0.12.7",
+  "version": "0.0.0-development",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "release": "dotenv release-it"
+    "release": "dotenv release-it",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -27,7 +28,9 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@release-it/bumper": "^2.0.0",
+    "@semantic-release/exec": "^5.0.0",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/npm": "^7.1.3",
     "@vue/cli-plugin-babel": "^4.5.4",
     "@vue/cli-plugin-eslint": "^4.5.4",
     "@vue/cli-plugin-pwa": "^4.5.4",
@@ -38,8 +41,8 @@
     "dotenv-cli": "^4.0.0",
     "eslint": "^7.26.0",
     "eslint-plugin-vue": "^7.9.0",
-    "release-it": "^14.6.2",
     "sass": "^1.32.13",
+    "semantic-release": "^17.4.3",
     "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
@@ -59,5 +62,9 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/educorvi/edi_sicherinvestieren.git"
+  }
 }
