--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sicher_investieren",
-  "version": "0.0.0-development",
+  "version": "0.12.7",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
