--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "devDependencies": {
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
-    "@semantic-release/npm": "^7.1.3",
     "@vue/cli-plugin-babel": "^4.5.4",
     "@vue/cli-plugin-eslint": "^4.5.4",
     "@vue/cli-plugin-pwa": "^4.5.4",
@@ -38,6 +37,7 @@
     "@vue/cli-plugin-vuex": "^4.5.4",
     "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.0.3",
+    "conventional-changelog-eslint": "^3.0.9",
     "dotenv-cli": "^4.0.0",
     "eslint": "^7.26.0",
     "eslint-plugin-vue": "^7.9.0",
