--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -7,8 +7,8 @@
     "header-max-length": [2, "always", 100],
     "subject-case": [
       2,
-      "never",
-      ["sentence-case", "start-case", "pascal-case", "upper-case"]
+      "always",
+      ["start-case"]
     ],
     "subject-empty": [2, "never"],
     "subject-full-stop": [2, "never", "."],
@@ -18,14 +18,14 @@
       2,
       "always",
       [
-        "fix",
-        "update",
-        "new",
-        "breaking",
-        "docs",
-        "build",
-        "upgrade",
-        "chore"
+        "Fix",
+        "Update",
+        "New",
+        "Breaking",
+        "Docs",
+        "Build",
+        "Upgrade",
+        "Chore"
       ]
     ]
   }
